--- a/src/components/ClickableCircli.css
+++ b/src/components/ClickableCircli.css
@@ -18,7 +18,7 @@
 
 .clickable-circular-image img {
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 50%;
 
     /* Make the image circular */
@@ -36,6 +36,7 @@
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+/Edge */
     user-select: none; /* Standard */
+    font-size: 16px;
 }
 
 
