--- a/src/components/Parlament.css
+++ b/src/components/Parlament.css
@@ -18,7 +18,7 @@
 }
 
 .blue-text {
-    background-image: linear-gradient(45deg, #3498db, #9b59b6); /* צבעי גרדיאנט בצבע כחול */
+    background-image: linear-gradient(45deg,cornflowerblue, darkblue); /* צבעי גרדיאנט בצבע כחול */
     -webkit-background-clip: text; /* צביעת הטקסט על פי הצבע של התמונה ברקע */
     background-clip: text; /* גרסה רגילה של הפרופרטי */
     color: transparent; /* הסתרת הצבע המקורי של הטקסט */
