--- a/src/components/ClickableCircli.css
+++ b/src/components/ClickableCircli.css
@@ -29,7 +29,7 @@
 
 .clickable-circular-image p {
     text-align: center;
-    font-family:"Comic Sans MS";
+    font-family:"Britannic Bold";
     -webkit-text-stroke: 1px darkblue!important;
     color: #ffffff;
     -webkit-user-select: none; /* Safari */
