--- a/src/components/ClickableCircliMinisters.css
+++ b/src/components/ClickableCircliMinisters.css
@@ -7,7 +7,7 @@
     border-color: darkblue;/* Add a smooth transition */
     border-radius: 50%;
     border-width: 5px;
-
+    margin-bottom: 15px;
 
 }
 
